tests/neg/simple/bool-01.ts

/*@ emp :: IArray<number> */
var emp = [];

assert(emp === null);

assert(false);

